--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <section id="login">
             <div id="foto">
-                foto
+                
             </div>
 
             <div id="Formulário">
@@ -18,7 +18,9 @@
                 <p>
                     Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
                 </p>
-                <form action="login.php" method="post" autocomplete="on"></form>
+                <form action="login.php" method="post" autocomplete="on">
+
+                </form>
             </div>
         </section>
     </main>
