--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <main>
@@ -20,7 +21,26 @@
                     Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
                 </p>
                 <form action="login.php" method="post" autocomplete="on">
-
+                    <div class="campo">
+                        <i class='material-icons'>
+                            person
+                        </i>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu E-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <i class='material-icons'>
+                            key
+                        </i>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required>
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="entrar">
+                    <a href="Esqueci.html">Esqueci a senha
+                        <i class='material-icons'>
+                            mail
+                        </i>
+                    </a>
                 </form>
             </div>
         </section>
