--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <i class='material-icons'>
                             person
                         </i>
-                        <input type="email" name="login" id="ilogin" placeholder="Seu E-mail" autocomplete="email" required maxlength="30">
+                        <input type="email" name="login" id="ilogin" placeholder="Seu E-mail" autocomplete="email" required maxlength="30" size="30">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
@@ -36,7 +36,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="entrar">
-                    <a href="Esqueci.html">Esqueci a senha
+                    <a  href="Esqueci.html" class="botao" >Esqueci a senha
                         <i class='material-icons'>
                             mail
                         </i>
